--- a/.env
+++ b/.env
@@ -6,5 +6,6 @@ REACT_APP_STORAGE_BUCKET=expensify-5cb4b.appspot.com
 REACT_APP_MESSAGE_SENDER_ID=1086681601316
 REACT_APP_APP_ID=1:1086681601316:web:de44f8eebb7a2a776dcfb1
 REACT_APP_MEASUREMENT_ID=G-8DXGMZVR4S
+REACT_APP_KING_KEY=8eBfiHh9eeeJJzi3zchLm1RPaxT2
   
  
