--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "JesseSkralskisBlog",
   "version": "0.1.0",
   "engines": {
-    "node": "10.16.3"
+    "node": "10.16.3",
+    "npm": "6.13.4"
   },
   "private": true,
   "dependencies": {
