--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "JesseSkralskisBlog",
+  "name": "Jillow",
   "version": "0.1.0",
   "engines": {
     "node": "10.16.3",
@@ -7,31 +7,45 @@
   },
   "private": true,
   "dependencies": {
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "es6-promise": "^4.2.8",
     "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
     "firebase": "^7.6.1",
+    "graphql": "^14.6.0",
     "history": "^4.10.1",
+    "isomorphic-fetch": "^2.2.1",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
+    "node-fetch": "^2.6.0",
     "node-sass": "^4.13.0",
     "numeral": "^2.0.6",
     "raf": "^3.4.1",
     "react": "^16.11.0",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-dates": "^21.5.0",
     "react-dom": "^16.11.0",
+    "react-google-maps": "^9.4.5",
+    "react-modal": "^3.11.2",
+    "react-places-autocomplete": "^7.2.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "react-test-renderer": "^16.12.0",
+    "recompose": "^0.30.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "uuid": "^3.3.3"
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "server": "nodemon server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -49,10 +63,11 @@
     ]
   },
   "devDependencies": {
-    "jest": "^24.9.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "enzyme-to-json": "^3.4.3",
+    "jest": "^24.9.0",
+    "nodemon": "^2.0.2",
     "react-test-renderer": "^16.12.0"
   }
 }
