--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-google-maps": "^9.4.5",
     "react-modal": "^3.11.2",
     "react-places-autocomplete": "^7.2.1",
+    "react-query": "^1.1.7",
+    "react-query-devtools": "^1.0.13",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
