--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "react-dates": "^21.5.0",
     "react-dom": "^16.11.0",
     "react-google-maps": "^9.4.5",
+    "react-loader-spinner": "^3.1.5",
     "react-modal": "^3.11.2",
     "react-places-autocomplete": "^7.2.1",
+    "react-promise-tracker": "^2.1.0",
     "react-query": "^1.1.7",
     "react-query-devtools": "^1.0.13",
     "react-redux": "^7.1.3",
