--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "node": "10.16.3",
     "npm": "6.13.4"
   },
+  "proxy": "https://completecriminalchecks.com",
   "private": true,
   "dependencies": {
     "axios": "^0.19.2",
