--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,1 @@
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-
-[[headers]]
- 
-  for = "/*"
-    [headers.values]
-    Access-Control-Allow-Origin = "*"
+/api/*  https://completecriminalchecks.com:splat  200
