--- a/netlify.toml
+++ b/netlify.toml
@@ -1,1 +1,4 @@
-/api/*  https://completecriminalchecks.com:splat  200
+[build]
+  command = "yarn build && cd functions/node-fetch && yarn"
+  functions = "functions"
+  publish = "dist"
