--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,1 @@
-[build]
-  command = "yarn build && cd functions/node-fetch && yarn"
-  functions = "functions"
-  publish = "dist"
+/api/*  https://completecriminalchecks.com:splat  200
