--- a/netlify.toml
+++ b/netlify.toml
@@ -1,1 +1,6 @@
-/api/*  https://completecriminalchecks.com:splat  200
+[[redirects]]
+from = "/api/*"
+to = “https://completecriminalchecks.com/:splat”
+status = 200
+force = true
+headers = {X-From = "Netlify"}
